Add M.A.S.H. IoT firmware, docs, and RPi gateway modules
Introduces Arduino firmware for dual SCD41 sensor management, relay control, and safety watchdog, including new config and modularized code. Adds Raspberry Pi gateway modules for serial communication, logic engine, database, web UI, and cloud sync, along with supporting documentation (API, schema, ML). Updates .gitignore and scripts for improved development workflow.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /.history
 rpi_gateway/config/.env
 /.vscode
+/rpi_gateway/venv
+/rpi_gateway/app/__pycache__
+/rpi_gateway/app/core/__pycache__
+/rpi_gateway/app/database/__pycache__
+/rpi_gateway/app/utils/__pycache__
+/rpi_gateway/app/web/__pycache__
