--- a/arduino_firmware/platformio.ini
+++ b/arduino_firmware/platformio.ini
@@ -1,2 +1,30 @@
-; PlatformIO configuration file
-; Arduino board settings, dependencies, and build flags
+; PlatformIO Project Configuration File
+;
+; M.A.S.H. IoT - Arduino Firmware
+; Hardware: Arduino Uno R3
+; Sensors: 2x SCD41 (I2C)
+; Actuators: 8-Channel Relay Module
+
+[env:uno]
+platform = atmelavr
+board = uno
+framework = arduino
+
+; Serial Monitor Configuration
+monitor_speed = 9600
+monitor_filters = default
+
+; Build flags
+build_flags = 
+    -D SERIAL_BAUD=9600
+    -D SENSOR_READ_INTERVAL=5000
+    -D WATCHDOG_TIMEOUT=10000
+
+; Library dependencies
+lib_deps = 
+    adafruit/Adafruit SCD30@^1.0.11
+    sensirion/Sensirion I2C SCD4x@^0.4.0
+    stevemarple/SoftWire@^2.0.7
+
+; Upload settings
+upload_speed = 115200
