Refactor web UI and logic, disable spawning sensor
Major refactor of the Flask web routes and templates for a modern dashboard UI, including new base layout, navigation, and CSS. The dashboard now displays live sensor and actuator states for fruiting and spawning rooms. The Arduino firmware and sensor code were updated to disable the spawning room sensor and related logic, focusing on single-sensor operation. Logic engine actuation code was restructured for clearer rule-based control and actuator command formatting.

--- a/arduino_firmware/platformio.ini
+++ b/arduino_firmware/platformio.ini
@@ -5,10 +5,11 @@
 ; Sensors: 2x SCD41 (I2C)
 ; Actuators: 8-Channel Relay Module
 
-[env:uno]
+[env:megaatmega2560]
 platform = atmelavr
-board = uno
+board = megaatmega2560
 framework = arduino
+upload_port = COM12
 
 ; Serial Monitor Configuration
 monitor_speed = 9600
@@ -22,6 +23,7 @@ build_flags =
 
 ; Library dependencies
 lib_deps = 
+    ArduinoJson
     adafruit/Adafruit SCD30@^1.0.11
     sensirion/Sensirion I2C SCD4x@^0.4.0
     stevemarple/SoftWire@^2.0.7
