--- a/rpi_gateway/requirements.txt
+++ b/rpi_gateway/requirements.txt
@@ -16,10 +16,10 @@ firebase-admin==6.3.0
 python-firebase==1.2
 
 # Machine Learning
-scikit-learn==1.3.2
-numpy==1.24.3
-pandas==2.1.4
-joblib==1.3.2
+scikit-learn
+numpy
+pandas
+joblib
 
 # System & Utilities
 python-dotenv==1.0.0
