Integrate cloud sync, update Arduino protocol, and enhance docs
Added cloud integration modules (backend API, MQTT, Firebase, sync manager) and updated configuration files for environment, actuators, and system settings. Refactored Arduino firmware to use JSON-based serial commands and updated actuator pin mappings. Enhanced documentation with new guides for cloud integration, quickstart, and updates. Improved web dashboard and controls UI to match new actuator set and status indicators. Removed obsolete code and updated serial communication to match new protocol.

--- a/arduino_firmware/platformio.ini
+++ b/arduino_firmware/platformio.ini
@@ -5,11 +5,11 @@
 ; Sensors: 2x SCD41 (I2C)
 ; Actuators: 8-Channel Relay Module
 
-[env:megaatmega2560]
+[env:uno]
 platform = atmelavr
-board = megaatmega2560
+board = uno
 framework = arduino
-upload_port = COM12
+upload_port = COM15
 
 ; Serial Monitor Configuration
 monitor_speed = 9600
