--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ rpi_gateway/config/.env
 /rpi_gateway/app/database/__pycache__
 /rpi_gateway/app/utils/__pycache__
 /rpi_gateway/app/web/__pycache__
+/rpi_gateway/app/cloud/__pycache__
