Refactor backend device identification and heartbeat logic
Device credentials and identification are now loaded from the config.yaml 'device' section instead of environment variables. The backend connection check interval is increased to 5 minutes, and the generic /health endpoint is replaced with a device-specific /devices/{device_id}/heartbeat endpoint for proper device tracking. Updated .env.example and config.yaml to reflect these changes.

--- a/rpi_gateway/config/.env.example
+++ b/rpi_gateway/config/.env.example
@@ -2,24 +2,14 @@
 # Firebase credentials, API keys, etc.
 
 # Backend API Configuration
-BACKEND_URL=https://api.mashmarket.app
-BACKEND_API_KEY=your_api_key_here
+BACKEND_URL=https://api.mashmarket.app/api/v1
+DEVICE_EMAIL=your_device_email@example.com
+DEVICE_PASSWORD=your_device_password
 
-# Firebase Configuration
-FIREBASE_PROJECT_ID=
-FIREBASE_CLIENT_EMAIL=
-FIREBASE_PRIVATE_KEY=
-
-# MQTT Configuration (HiveMQ Cloud)
-MQTT_BROKER=290691cd2bcb4d7faf979db077890beb.s1.eu.hivemq.cloud
-MQTT_PORT=8883
-MQTT_USERNAME=
-MQTT_PASSWORD=
-MQTT_USE_TLS=true
-
-# Device Configuration
-DEVICE_ID=rpi_gateway_001
-DEVICE_NAME=MASH IoT Gateway
+# Legacy fields (deprecated - use config.yaml device section instead)
+# DEVICE_ID is now read from config.yaml
+# DEVICE_NAME is now read from config.yaml
+# DEVICE_SERIAL is now read from config.yaml
 
 # JWT - JSON Web Token Authentication
 # Usage: REST API authentication, WebSocket connections, session management
