Implement UI/UX and system improvements for MASH IoT
This update introduces a new navigation logo, a startup intro video, and major UI redesigns for WiFi setup, AI Insights, and Settings pages. Dashboard condition status now updates dynamically, and sensor error handling on boot is improved. A persistent user preferences system is added to override and save config changes across reboots. Actuator control communication is fixed to use JSON format for Arduino compatibility. New assets are included, and CSS enhancements provide a modern, consistent look throughout the application.

--- a/rpi_gateway/config/config.yaml
+++ b/rpi_gateway/config/config.yaml
@@ -13,7 +13,7 @@ device:
 # System Configuration
 system:
   ml_enabled: true
-  auto_mode: true
+  auto_mode: false
   data_sync_interval: 300  # seconds (5 minutes - reduced to avoid backend strain)
   sensor_read_interval: 5  # seconds
 
