Fix actuator control bug and unify command handling
Removed duplicate serial command handling and ensured watchdog heartbeat is updated on all serial data in Arduino firmware. Updated Python backend to always send actuator commands in JSON format and simplified serial communication logic. Added detailed documentation of the bug and fixes in docs/ACTUATOR_CONTROL_BUGFIX.md. Deleted unused diagnostics.cpp.

--- a/arduino_firmware/platformio.ini
+++ b/arduino_firmware/platformio.ini
@@ -9,7 +9,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-upload_port = COM15
 
 ; Serial Monitor Configuration
 monitor_speed = 9600
@@ -30,3 +29,4 @@ lib_deps =
 
 ; Upload settings
 upload_speed = 115200
+upload_flags = -V
