--- a/rpi_gateway/requirements.txt
+++ b/rpi_gateway/requirements.txt
@@ -37,6 +37,9 @@ PyJWT==2.8.0
 # Logging & Monitoring
 colorlog==6.8.0
 
+# QR Code Generation
+qrcode[pil]==7.4.2
+
 # Development Tools (optional)
 pytest==7.4.3
 pytest-flask==1.3.0
