Add mDNS service advertisement for device discovery
Introduces mDNS/zeroconf-based local network discovery for the MASH IoT Gateway. Adds mdns_advertiser utility, integrates mDNS start/stop in main orchestrator, updates requirements with zeroconf, provides setup script and documentation for enabling mDNS via Avahi. This allows mobile apps to automatically discover the gateway on the same network.

--- a/rpi_gateway/requirements.txt
+++ b/rpi_gateway/requirements.txt
@@ -40,6 +40,9 @@ colorlog==6.8.0
 # QR Code Generation
 qrcode[pil]==7.4.2
 
+# mDNS/Zeroconf for local device discovery
+zeroconf==0.131.0
+
 # Development Tools (optional)
 pytest==7.4.3
 pytest-flask==1.3.0
