--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ rpi_gateway/config/.env
 /rpi_gateway/app/web/__pycache__
 /rpi_gateway/app/cloud/__pycache__
 rpi_gateway/config/firebase_config.json
+/build
