Ignore DB files and remove tracked sensor_data.db
Update .gitignore to exclude database files (*.db, *.sqlite) and specific data directories (/rpi_gateway/data/*.db, /rpi_gateway/rpi_gateway/data/*.db). Remove the committed SQLite database rpi_gateway/rpi_gateway/data/sensor_data.db from the repository to avoid tracking local binary DBs and reduce repo bloat.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ rpi_gateway/config/.env
 /rpi_gateway/app/cloud/__pycache__
 rpi_gateway/config/firebase_config.json
 /build
+*.db
+*.sqlite
+/rpi_gateway/data/*.db
+/rpi_gateway/rpi_gateway/data/*.db
